# developers-sdk-py

./: LICENSE  Pipfile  README.md  setup.cfg  setup.py
sdk/: __about__.py  api_client.py  request_flattener.py  signature_generator.py
tests/: test_api_client.py  test_request_flattener.py  test_signature_generator.py
