[metadata]
name = line-developers-sdk
version = 0.0.1
author = Yoonyoul Yoo
author_email = ryukato79@gmail.com
description = line-developers-sdk for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryukato/developers-sdk/tree/master/developers-sdk-py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[bdist_wheel]
universal = 1
